flickering bug fix

--- a/css/css-assets/blocks.styl
+++ b/css/css-assets/blocks.styl
@@ -1,16 +1,18 @@
 // BLOCKS
 @import '../assets/imports.styl'
 
-.loader-pie
-  rect 70*PX
-  PI = 3.141598
-  transform rotate(-90deg)
+#main
+  padding 20px
 
-  &--blue, &--yellow
+.loader-pie
+  rect 70px
+  transform rotate(-90deg)
+  display block
+  &--color2, &--color1
     fill none
-    stroke-dasharray 24*PI*PX
-    stroke-width 5*PX
-  &--blue
+    stroke-dasharray (24px*PI)px
+    stroke-width 5px
+  &--color2
     stroke #3EBBEE
-  &--yellow
+  &--color1
     stroke #F9C77F
