--- a/css/css-assets/general.styl
+++ b/css/css-assets/general.styl
@@ -13,6 +13,7 @@ body, html
 body
 	background-color white
 	font-family monospace
+	font-size 16px
 
 @css{
 	::selection{
